--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,13 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "illuminate/database": "~4.2.6",
-    "illuminate/support": "~4.2.6"
+    "illuminate/database": "5.0.*",
+    "illuminate/support": "5.0.*"
   },
   "require-dev": {
     "mockery/mockery": "0.9.*",
-    "phpunit/phpunit": "4.2.*",
-    "orchestra/testbench": "2.2.*"
+    "phpunit/phpunit": "4.5.*",
+    "orchestra/testbench": "3.0.*"
   },
   "autoload": {
     "psr-4": {
