--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "illuminate/database": "5.0.*",
-    "illuminate/support": "5.0.*"
+    "illuminate/database": ">=5.0.6",
+    "illuminate/support": ">=5.0.6"
   },
   "require-dev": {
     "mockery/mockery": "0.9.*",
