Take ownership of the fork

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "nanigans/single-table-inheritance",
+  "name": "phaza/single-table-inheritance",
   "description": "Single Table Inheritance Trait",
   "keywords": ["single", "table", "inheritance", "laravel", "eloquent", "model"],
   "license": "MIT",
@@ -7,6 +7,10 @@
     {
       "name": "Jon Palmer",
       "email": "jpalmer@nanigans.com"
+    },
+    {
+      "name": "Peter Haza",
+      "email": "peter.haza+github@gmail.com"
     }
   ],
   "require": {
@@ -21,12 +25,12 @@
   },
   "autoload": {
     "psr-4": {
-      "Nanigans\\SingleTableInheritance\\": "src/"
+      "Phaza\\SingleTableInheritance\\": "src/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "Nanigans\\SingleTableInheritance\\Tests\\": "tests/"
+      "Phaza\\SingleTableInheritance\\Tests\\": "tests/"
     }
   },
   "minimum-stability": "stable"
