--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ php:
   - 5.6
   - hhvm
 
-before_script:
-  - travis_retry composer self-update
-  - travis_retry composer install --prefer-source --no-interaction --dev
+install:
+  - travis_retry composer install --prefer-source --no-interaction
 
 script: vendor/bin/phpunit
