Added compatibility for Laravel 5.2

--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
     }
   ],
   "require": {
-    "php": ">=5.4.0",
-    "illuminate/database": "5.1.*",
-    "illuminate/support": "5.1.*"
+    "php": ">= 5.5.9",
+    "illuminate/database": "~5.1",
+    "illuminate/support": "~5.1"
   },
   "require-dev": {
     "mockery/mockery": "0.9.*",
@@ -27,6 +27,11 @@
   "autoload-dev": {
     "psr-4": {
       "Nanigans\\SingleTableInheritance\\Tests\\": "tests/"
+    }
+  },
+  "extra": {
+    "branch-alias": {
+        "dev-master": "0.6.x-dev"
     }
   },
   "minimum-stability": "stable"
