--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,13 @@
   ],
   "require": {
     "php": ">= 5.5.9",
-    "illuminate/database": "~5.1",
-    "illuminate/support": "~5.1"
+    "illuminate/database": "5.2.*",
+    "illuminate/support": "5.2.*"
   },
   "require-dev": {
     "mockery/mockery": "0.9.*",
     "phpunit/phpunit": "4.7.*",
-    "orchestra/testbench": "3.1.*"
+    "orchestra/testbench": "3.2.*"
   },
   "autoload": {
     "psr-4": {
