--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   },
   "require-dev": {
     "mockery/mockery": "0.9.*",
-    "phpunit/phpunit": "4.7.*",
+    "phpunit/phpunit": "~4.8|~5.2",
     "orchestra/testbench": "3.2.*"
   },
   "autoload": {
