--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,14 @@
   ],
   "require": {
     "php": ">= 5.5.9",
-    "illuminate/database": "5.2.*|5.3.*|5.4.*",
-    "illuminate/support": "5.2.*|5.3.*|5.4.*"
+    "illuminate/database": "5.2.*|5.3.*|5.4.*|5.5.*",
+    "illuminate/support": "5.2.*|5.3.*|5.4.*|5.5.*"
   },
   "require-dev": {
     "mockery/mockery": "0.9.*",
-    "phpunit/phpunit": "~4.8|~5.2",
-    "orchestra/testbench": "3.2.*"
+    "phpunit/phpunit": "~4.8|~5.2|~6.0",
+    "orchestra/testbench": "3.2.*|3.5.*",
+    "orchestra/database": "3.2.*|3.5.*"
   },
   "autoload": {
     "psr-4": {
