--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
   ],
   "require": {
     "php": ">= 5.5.9",
-    "illuminate/database": "5.2.*|5.3.*|5.4.*|5.5.*",
-    "illuminate/support": "5.2.*|5.3.*|5.4.*|5.5.*"
+    "illuminate/database": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*",
+    "illuminate/support": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*"
   },
   "require-dev": {
     "mockery/mockery": "0.9.*",
