--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   "require": {
     "php": ">= 5.5.9",
     "illuminate/database": ">= 5.2",
-    "illuminate/support": ">= 5.2"
+    "illuminate/support": ">= 5.2",
+    "illuminate/events": "^5.8"
   },
   "require-dev": {
     "mockery/mockery": "0.9.*|~1.0",
