--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,20 +8,28 @@ jobs:
 
     strategy:
       matrix:
-        php-versions: ['5.6', '7.0', '7.1', '7.2', '7.3', '7.4']
-    name: Unit Tests - PHP ${{ matrix.php-versions }}
+        php: ['7.2', '7.3', '7.4', '8.0']
+        laravel: [5.8.*, 6.*, 7.*, 8.*]
+        exclude:
+          - php: 7.2
+            laravel: 8.*
+          - php: 8.0
+            laravel: 5.8.*
+    name: Unit Tests - PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }}
     steps:
       - uses: actions/checkout@v1
 
       - name: Setup PHP
-        uses: shivammathur/setup-php@v1
+        uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{ matrix.php-versions }}
+          php-version: ${{ matrix.php }}
           extensions: mbstring, php-xml, sqlite3
           coverage: xdebug
 
       - name: Install dependencies
-        run: composer install --prefer-dist --no-progress
+        run: |
+            composer require "laravel/framework:${{ matrix.laravel }}" --no-interaction --no-update
+            composer update --prefer-dist --no-interaction
 
       - name: Run test suite
         run: composer run-script test
