--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,15 @@
     }
   ],
   "require": {
-    "php": ">= 5.5.9",
+    "php": ">= 7.2",
     "illuminate/database": ">= 5.2",
     "illuminate/support": ">= 5.2"
   },
   "require-dev": {
     "mockery/mockery": "0.9.*|~1.0",
-    "phpunit/phpunit": "~4.8|~5.2|~6.0|~7.0",
-    "orchestra/testbench": "3.2.*|3.5.*|3.6.*",
-    "orchestra/database": "3.2.*|3.5.*|3.6.*"
+    "phpunit/phpunit": "~8.0|~9.0",
+    "orchestra/testbench": "3.8.*|4.*|5.*|6.*",
+    "orchestra/database": "3.8.*|4.*|5.*|6.*"
   },
   "autoload": {
     "psr-4": {
