--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "illuminate/support": ">= 5.2"
   },
   "require-dev": {
-    "mockery/mockery": "0.9.*|~1.0",
+    "mockery/mockery": "~1.0",
     "phpunit/phpunit": "~8.0|~9.0",
     "orchestra/testbench": "3.8.*|4.*|5.*|6.*",
     "orchestra/database": "3.8.*|4.*|5.*|6.*"
