--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
   "authors": [
     {
       "name": "Jon Palmer",
-      "email": "jpalmer@nanigans.com"
+      "email": "328224+jonspalmer@users.noreply.github.com"
     }
   ],
   "require": {
@@ -32,7 +32,7 @@
   },
   "extra": {
     "branch-alias": {
-        "dev-master": "0.9.x-dev"
+        "dev-main": "1.1.x-dev"
     }
   },
   "minimum-stability": "dev",
